# NHTTC

./: CMakeLists.txt  LICENSE  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: nhttc_vive.yaml  rosconsole.conf
launch/: nhttc_vive.launch
msg/: AgentState.msg
scripts/: odometry_repeater  simple_robot
src/: nhttc_node.cpp  nhttc_node.h
src/nhttc_interface/: CMakeLists.txt  agent.cpp  agent.h  nhttc_interface.cpp  util.cpp  util.h
src/sgd/: CMakeLists.txt  sgd.cpp  ttc_obstacles.cpp  ttc_obstacles.h  ttc_sgd_problem.h  ttc_sgd_problem_models.cpp
